--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.11"
   }
 }
