--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-list",
   "version": "1.0.0",
-  "description": "",
+  "description": "<a name=\"readme-top\"></a>",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,7 +17,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
-    "hint": "^7.1.8",
+    "hint": "^7.1.9",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
     "stylelint": "^13.13.1",
@@ -30,5 +30,6 @@
   },
   "dependencies": {
     "node-fetch": "^2.6.11"
-  }
+  },
+  "main": "webpack.config.js"
 }
