--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.5.0",
     "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
     "hint": "^7.1.9",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.5.0",
+    "jest-localstorage-mock": "^2.4.26",
     "style-loader": "^3.3.3",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -30,6 +36,7 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "jest-environment-jsdom": "^29.5.0",
     "node-fetch": "^2.6.11"
   },
   "main": "webpack.config.js"
